--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8" />
-  <link rel="icon" type="image"  href=src/assets/images/Logo/storex.png />
+  <link rel="icon" type="image" href="src/assets/images/Logo/storex.png" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>StoreX</title>
 </head>
